33 Fix 🐛, header centered alignment.

--- a/assets/src/css/modules/_header.scss
+++ b/assets/src/css/modules/_header.scss
@@ -40,6 +40,8 @@
 
 	&--header &__item--branding {
 		position: relative;
+		margin-left: auto;
+		margin-right: auto;
 
 		@media ( query( max, tablet ) ) {
 			background: $black;
